Fixes tests broken by RdaSink behavioral changes.